--- a/src/main/resources/public/prototipo.html
+++ b/src/main/resources/public/prototipo.html
@@ -3,78 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tetris UI</title>
-    <style>
-        body {
-          margin: 0;
-          padding: 0;
-          background-color: black;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-          color: white;
-          font-family: sans-serif;
-        }
-
-        .container {
-          display: flex;
-          gap: 2rem;
-        }
-
-        .board {
-          display: grid;
-          grid-template-rows: repeat(10, 1fr);
-          grid-template-columns: repeat(8, 1fr);
-          height: 80vh;
-          aspect-ratio: 8 / 10;
-          background-color: #222;
-          border: 2px solid #666;
-        }
-
-        .cell {
-          border: 1px solid #444;
-          background-color: #333;
-          width: 100%;
-          height: 100%;
-        }
-
-        /* Colores de piezas */
-        .piece-I { background-color: cyan; }
-        .piece-O { background-color: yellow; }
-        .piece-T { background-color: purple; }
-        .piece-S { background-color: limegreen; }
-        .piece-Z { background-color: red; }
-        .piece-L { background-color: orange; }
-        .piece-J { background-color: blue; }
-
-        .sidebar {
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-          gap: 2rem;
-        }
-
-        .score, .next-piece {
-          background-color: #111;
-          padding: 1rem;
-          border: 1px solid #555;
-          border-radius: 8px;
-        }
-
-        .next-grid {
-          display: grid;
-          grid-template-rows: repeat(4, 1fr);
-          grid-template-columns: repeat(4, 1fr);
-          aspect-ratio: 1;
-          gap: 2px;
-          margin-top: 1rem;
-        }
-
-        .next-grid .cell {
-          width: 100%;
-          height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div class="container">
